<resources>
    <string name="app_name">Court Counter</string>
    <string name="Reset">Reset</string>
    <string name="team_a">Team A</string>
    <string name="_3_pointsA">+3 points</string>
    <string name="_2_pointsA">+2 points</string>
    <string name="free_throwA">Free Throw</string>
    <string name="_0A">0</string>
    <string name="team_b">Team B</string>
    <string name="_3_pointsB">+3 points</string>
    <string name="_2_pointsB">+2 points</string>
    <string name="free_throwB">Free Throw</string>
    <string name="_0B">0</string>
</resources>
